syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/common/common_object.proto";
import "proto/core/io/address.proto";

message BeaverAction {
    repeated bytes values = 1;
    repeated syft.core.common.UID locations = 2;
    syft.core.io.Address address = 3;
}
